# full_pledged_FastAPI_blog_app

./: pyproject.toml
fastapi_blog/: app.py  blog.db  database.py  models.py
fastapi_blog/core/: utils.py
fastapi_blog/templates/: home.html
